# Networked_JUCE_Template

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Network/: NetUMPThread.h  NetworkComponent.cpp  NetworkComponent.h
